--- a/WPF/Mob/Addmob.xaml
+++ b/WPF/Mob/Addmob.xaml
@@ -1,14 +1,13 @@
-﻿<controls:MetroWindow x:Class="MythicMobs_edit.WPF.Mob.Addmob"
+﻿<Window x:Class="MythicMobs_edit.WPF.Mob.Addmob"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                      xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
                       mc:Ignorable="d"
         Title="MythicMobs_edit 添加生物" Height="746" Width="1280"
-        Icon="/MythicMobs_edit;component/image/方的7.jpg" Loaded="Window_Loaded" Background="Transparent" ResizeMode="CanMinimize">
+        Icon="/MythicMobs_edit;component/image/方的7.jpg" Loaded="Window_Loaded" Background="Transparent" ResizeMode="NoResize">
     <WindowChrome.WindowChrome>
-        <WindowChrome GlassFrameThickness="-1" CaptionHeight="0"/>
+        <WindowChrome GlassFrameThickness="-1"/>
     </WindowChrome.WindowChrome>
     <Grid Background="#00FFFFFF">
         <Grid.ColumnDefinitions>
@@ -27,13 +26,13 @@
             </StackPanel.Effect>
         </StackPanel>
 
-        <TextBox Margin="0,0,0,0" Background="#AA898989" Name="Out" Style="{StaticResource TextBox}" Grid.Column="3" RenderTransformOrigin="0.0,0.0" TextWrapping="Wrap"/>
+        <TextBox Margin="0,30,0,0" Background="#AA898989" Name="Out" Style="{StaticResource TextBox}" Grid.Column="3" RenderTransformOrigin="0.0,0.0" TextWrapping="Wrap"/>
         <Button Content="返回" HorizontalAlignment="Left" Height="24" Margin="213,681,0,0" VerticalAlignment="Top" Width="95" Style="{StaticResource Button}"
                 Click="Return" Grid.Column="2"/>
         <Button Content="就决定是你了" HorizontalAlignment="Left" Height="24" Margin="113,681,0,0" VerticalAlignment="Top" Width="95" Style="{StaticResource Button}"
                 Click="Button_Click" Grid.Column="2"/>
-        <StackPanel Margin="0,0,0,0" Background="#00FFFFFF">
-            <Expander Header="基础设置" Foreground="#FFFFFFFF" VerticalAlignment="Top" IsExpanded="True" Background="#00FFFFFF">
+        <StackPanel Margin="0,30,0,0" Background="#00FFFFFF">
+            <Expander Header="基础设置" Foreground="#FF000000" VerticalAlignment="Top" IsExpanded="True" Background="#22898989">
                 <Grid>
                     <Label Content="生物名字" HorizontalAlignment="Left" Height="25" Margin="5,0,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
                     <Label Content="生物类型" HorizontalAlignment="Left" Height="25" Margin="5,25,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
@@ -78,7 +77,7 @@
                              VerticalAlignment="Top" Width="243" Text="{Binding Mob.Options.MovementSpeed}" x:Name ="Options_MovementSpeed" PreviewTextInput="TextCompositionEventArgs"/>
                 </Grid>
             </Expander>
-            <Expander Header="BOSS血条" VerticalAlignment="Top" Foreground="#FFFFFFFF" Margin="0,0,0,0" Background="#00FFFFFF">
+            <Expander Header="BOSS血条" VerticalAlignment="Top" Foreground="#FF000000" Margin="0,0,0,0" Background="#22898989">
                 <Grid>
                     <Label Content="标题" HorizontalAlignment="Left" Height="25" Margin="6,19,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
                     <Label Content="显示范围" HorizontalAlignment="Left" Height="25" Margin="6,44,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
@@ -106,7 +105,7 @@
                             x:Name="BossBar_Style_r" IsEnabled="False" Click="BossBar_Style_r_Click"/>
                 </Grid>
             </Expander>
-            <Expander Header="高级设置" VerticalAlignment="Top" Foreground="#FFFFFFFF"  Margin="0,0,0,0" Background="#00FFFFFF">
+            <Expander Header="高级设置" VerticalAlignment="Top" Foreground="#FF000000"  Margin="0,0,0,0" Background="#22898989">
                 <Grid Height="215">
                     <CheckBox Content="总是显示名称" HorizontalAlignment="Left" Height="15" Margin="3,4,0,0" VerticalAlignment="Top" Style="{StaticResource Check}"
                               IsChecked="{Binding Mob.Options.AlwaysShowName}" x:Name="Options_AlwaysShowName"/>
@@ -148,7 +147,7 @@
                               IsChecked="{Binding Mob.Modules.ImmunityTable}" x:Name="Modules_ImmunityTable"/>
                 </Grid>
             </Expander>
-            <Expander Header="生物AI-目标" Foreground="#FFFFFFFF" VerticalAlignment="Top" Margin="0,0,0,0" Background="#00FFFFFF">
+            <Expander Header="生物AI-目标" Foreground="#FF000000" VerticalAlignment="Top" Margin="0,0,0,0" Background="#22898989">
                 <Grid Height="167">
                     <Label Content="生物AI选择" HorizontalAlignment="Left" Margin="-3,140,0,-88" VerticalAlignment="Top" Style="{StaticResource Label}"/>
                     <ComboBox HorizontalAlignment="Left" Margin="72,143,0,0" VerticalAlignment="Top" Style="{StaticResource ComboBoxStyle}"
@@ -172,7 +171,7 @@
                     </ListView>
                 </Grid>
             </Expander>
-            <Expander Header="生物AI-行为" Foreground="#FFFFFFFF" VerticalAlignment="Top" Margin="0,0,0,0" Background="#00FFFFFF">
+            <Expander Header="生物AI-行为" Foreground="#FF000000" VerticalAlignment="Top" Margin="0,0,0,0" Background="#22898989">
                 <Grid Height="169">
                     <Label Content="生物AI选择" HorizontalAlignment="Left" Margin="0,140,0,-88" VerticalAlignment="Top" Style="{StaticResource Label}"/>
                     <ComboBox HorizontalAlignment="Left" Margin="75,142,0,0" VerticalAlignment="Top" Style="{StaticResource ComboBoxStyle}"
@@ -198,8 +197,8 @@
                 </Grid>
             </Expander>
         </StackPanel>
-        <StackPanel Margin="0,0,0,0" Grid.Column="1">
-            <Expander Header="生物掉落表" Foreground="#FFFFFFFF" HorizontalAlignment="Left" VerticalAlignment="Top" Width="319">
+        <StackPanel Margin="0,30,0,0" Grid.Column="1">
+            <Expander Header="生物掉落表" Foreground="#FF000000" VerticalAlignment="Top" Background="#22898989">
                 <Grid Height="168" Width="319">
                     <Label Content="掉落类型选择" HorizontalAlignment="Left" Margin="0,140,0,0" VerticalAlignment="Top" Style="{StaticResource Label}" Width="83"/>
                     <ComboBox HorizontalAlignment="Left" Margin="89,143,0,0" VerticalAlignment="Top" Style="{StaticResource ComboBoxStyle}"
@@ -225,7 +224,7 @@
 
                 </Grid>
             </Expander>
-            <Expander Header="生物等级掉落表" Foreground="#FFFFFFFF" HorizontalAlignment="Left" VerticalAlignment="Top" Width="319">
+            <Expander Header="生物等级掉落表" Foreground="#FF000000" VerticalAlignment="Top" Background="#22898989">
                 <Grid Height="168" Width="319">
                     <Label Content="掉落类型选择" HorizontalAlignment="Left" Margin="0,140,0,0" VerticalAlignment="Top" Style="{StaticResource Label}" Width="83"/>
                     <ComboBox HorizontalAlignment="Left" Margin="89,143,0,0" VerticalAlignment="Top" Style="{StaticResource ComboBoxStyle}"
@@ -251,7 +250,7 @@
 
                 </Grid>
             </Expander>
-            <Expander Header="伤害修正" Foreground="#FFFFFFFF" HorizontalAlignment="Left" VerticalAlignment="Top" Width="319">
+            <Expander Header="伤害修正" Foreground="#FF000000" VerticalAlignment="Top" Background="#22898989">
                 <Grid Height="168" Width="319">
                     <Label Content="伤害来源" HorizontalAlignment="Left" Margin="0,140,0,-88" VerticalAlignment="Top" Style="{StaticResource Label}" Width="60"/>
                     <ComboBox HorizontalAlignment="Left" Margin="65,142,0,0" VerticalAlignment="Top" Style="{StaticResource ComboBoxStyle}"
@@ -276,10 +275,10 @@
                     </ListView>
                 </Grid>
             </Expander>
-            <Expander Header="生物特殊设置" Foreground="#FFFFFFFF" HorizontalAlignment="Left" VerticalAlignment="Top" Width="319">
+            <Expander Header="生物特殊设置" Foreground="#FF000000" VerticalAlignment="Top" Background="#22898989">
                 <StackPanel HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Width="319" x:Name="panel"/>
             </Expander>
-            <Expander Header="怪物装备" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FFFFFFFF" Width="319">
+            <Expander Header="怪物装备" VerticalAlignment="Top" Foreground="#FF000000" Background="#22898989">
                 <Grid Height="88" Width="319">
                     <Label Content="头盔" HorizontalAlignment="Left" Margin="2,32,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
                     <Label Content="盔甲" HorizontalAlignment="Left" Margin="162,33,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
@@ -302,7 +301,7 @@
 
                 </Grid>
             </Expander>
-            <Expander Header="自定义击杀信息" Foreground="#FFFFFFFF" HorizontalAlignment="Left" VerticalAlignment="Top" Width="319">
+            <Expander Header="自定义击杀信息" Foreground="#FF000000" VerticalAlignment="Top" Background="#22898989">
                 <Grid Height="175" Width="319">
                     <Button Content="添加" HorizontalAlignment="Left" Height="20" Margin="253,140,0,0" VerticalAlignment="Top" Width="60" 
                             Click="Button_Click_6" Style="{StaticResource Button}"/>
@@ -322,7 +321,7 @@
                     </ListView>
                 </Grid>
             </Expander>
-            <Expander Header="生物等级设置" Foreground="#FFFFFFFF" HorizontalAlignment="Left" VerticalAlignment="Top" Width="319">
+            <Expander Header="生物等级设置" Foreground="#FF000000" VerticalAlignment="Top" Background="#22898989">
                 <Grid Height="122" Width="319">
                     <Label Content="击倒" HorizontalAlignment="Left" Margin="3,33,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
                     <Label Content="力量" HorizontalAlignment="Left" Margin="152,33,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
@@ -349,7 +348,7 @@
 
                 </Grid>
             </Expander>
-            <Expander Header="伪装" Foreground="#FFFFFFFF" HorizontalAlignment="Left" VerticalAlignment="Top" Width="319">
+            <Expander Header="伪装" Foreground="#FF000000" VerticalAlignment="Top" Background="#22898989">
                 <Grid Height="134" Width="319">
                     <Label Content="伪装类型" HorizontalAlignment="Left" Margin="2,4,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
                     <ComboBox HorizontalAlignment="Left" Margin="65,7,0,0" VerticalAlignment="Top" Style="{StaticResource ComboBoxStyle}"
@@ -383,8 +382,8 @@
                 </Grid>
             </Expander>
         </StackPanel>
-        <StackPanel Margin="0,0,0,37" Grid.Column="2">
-            <Expander Header="技能-机制" VerticalAlignment="Top" Foreground="White">
+        <StackPanel Margin="0,30,0,37" Grid.Column="2">
+            <Expander Header="技能-机制" VerticalAlignment="Top"  Foreground="#FF000000" Background="#22898989">
                 <Grid Height="190">
                     <ListView HorizontalAlignment="Left" Height="135" VerticalAlignment="Top" Width="313" x:Name="SkillMechanics_T"
                         Style="{StaticResource ListViewStyle1}" Margin="0,53,0,0">
@@ -410,7 +409,7 @@
 
                 </Grid>
             </Expander>
-            <Expander Header="技能-特效" VerticalAlignment="Top" Foreground="White">
+            <Expander Header="技能-特效" VerticalAlignment="Top"  Foreground="#FF000000" Background="#22898989">
                 <Grid Height="192">
                     <Label Content="特效类型" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource Label}"/>
                     <ComboBox HorizontalAlignment="Left" Margin="63,3,0,0" VerticalAlignment="Top" Height="20" Width="178" Style="{StaticResource ComboBoxStyle}"
@@ -435,7 +434,7 @@
                     </ListView>
                 </Grid>
             </Expander>
-            <Expander Header="技能-条件" Foreground="#FFFFFFFF">
+            <Expander Header="技能-条件" Foreground="#FF000000" Background="#22898989">
                 <Grid Height="169">
                     <ListView HorizontalAlignment="Left" Height="135" VerticalAlignment="Top" Width="313" x:Name="Conditions_T"
                         Style="{StaticResource ListViewStyle1}">
@@ -458,4 +457,4 @@
             </Expander>
         </StackPanel>
     </Grid>
-</controls:MetroWindow>
+</Window>
