--- a/WPF/Spawners/AddSpawners.xaml
+++ b/WPF/Spawners/AddSpawners.xaml
@@ -1,4 +1,4 @@
-﻿<controls:MetroWindow x:Class="MythicMobs_edit.WPF.Spawners.AddSpawners"
+﻿<Window x:Class="MythicMobs_edit.WPF.Spawners.AddSpawners"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -7,7 +7,7 @@
                       mc:Ignorable="d" Title="Blur Demo" Height="350" Width="525" 
         Background="Transparent" Loaded="Window_Loaded">
     <WindowChrome.WindowChrome>
-        <WindowChrome GlassFrameThickness="-1" CaptionHeight="0"/>
+        <WindowChrome GlassFrameThickness="-1"/>
     </WindowChrome.WindowChrome>
     <Grid Background="#A0FFFFFF">
         <TextBlock Foreground="White"
@@ -20,4 +20,4 @@
             <Run Text="walterlv.github.io"/>
         </TextBlock>
     </Grid>
-</controls:MetroWindow>
+</Window>
